executable("test"){
    include_dirs = [
    "//GL/src",
    "//GL/include",
    "//GL/Vendor",
    "/opt/homebrew/Cellar/glfw/3.3.8/include/",
    "/opt/homebrew/Cellar/glm/0.9.9.8/include/glm"
  ]
    sources = [
        "main.cpp",
    ]

    deps = [
        "//GL/src:engine",
    ]
    
    frameworks = [
        "OpenGL.framework",
    ]

    libs = [ "//GL/Vendor/lib/libglfw3.a" ]
}