executable("test"){
    include_dirs = [
    "//GL/src/Engine",
    "//GL/src",
    "//GL/Vendor",
    "/opt/homebrew/Cellar/glfw/3.3.8/include/",
    "/opt/homebrew/Cellar/glm/0.9.9.8/include/glm"
  ]
    sources = [
        "main.cpp",
    ]

    deps = [
        "//GL/src/Engine:engine",
    ]
    
    frameworks = [
        "OpenGL.framework",
    ]

    libs = [ "//GL/Vendor/lib/libglfw3.a" ]
}