shared_library("engine") {
  include_dirs = [
    "//GL/src",
    "//GL/include",
    "//GL/Vendor",
    "/opt/homebrew/Cellar/glfw/3.3.8/include/",
    "/opt/homebrew/Cellar/glm/0.9.9.8/include/glm"
  ]
  sources = [
    "LRUCache.hpp",
    "LRUCache.cpp",
    "Shaders.hpp",
    "Shaders.cpp",
    "Render.hpp",
    "Render.cpp",
    "Renderable.hpp",
    "Renderable.cpp",
    "Model.hpp",
    "Model.cpp",
    "Application.hpp",
    "Application.cpp",
    "Triangle.hpp",
    "Triangle.cpp",
    "Transformable.hpp",
    "Transformable.cpp",
    "Bitmap.hpp",
    "Texture.hpp",
    "Texture.cpp",
    "TextureController.hpp",
    "TextureController.cpp",
    "ShaderSrc.hpp",
    "Camera.hpp",
    "Camera.cpp",
    "Cube.hpp",
    "Cube.cpp",
    "MyGLM.hpp",
    "MyGLM.cpp",
  ]


  frameworks = [
    "Cocoa.framework",
    "CoreFoundation.framework",
    "CoreGraphics.framework",
    "CoreVideo.framework",
    "IOKit.framework",
    "OpenGL.framework",
  ]

  deps = [
    "//GL/Vendor:vendor",
  ]

  libs = [ "//GL/Vendor/lib/libglfw3.a" ]
}